# project-template

./: .cursorrules  .gitignore  .pre-commit-config.yaml  AGENT.md  Apptainer.def  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: format-check.yml  test.yml
config/: wandb_config.yaml
slurm/: train.sh
src/ml_project_template/: __init__.py
tests/: __init__.py  test_example.py
